--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,7 +2,7 @@
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_for(@user) do |f| %>
+    <%= form_for @user do |f| %>
       <%= f.label :first_name %>
       <%= f.text_field :first_name, class: 'form-control' %>
 
