--- a/app/views/attendances/_short_form.html.erb
+++ b/app/views/attendances/_short_form.html.erb
@@ -1,8 +1,6 @@
 <h1>Choose</h1>
 
-<%= form_for :attendance, url: {controller: 'attendances' ,action: 'create'} do |f| %>
-
-
+<%= form_for :attendance, url: {action: 'create'} do |f| %>
 <p>
  <%f.label :event_id%><br>
  <%= f.text_field :event_id %>
@@ -22,7 +20,6 @@
    <%= f.submit %>
  </p>
 
-<% end %>
-
 
 <%= link_to 'Host an Event', new_event_path %>
+<% end %>
