--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,15 @@
 </head>
 <body>
 
+<% if current_user %>
+  <%= link_to 'Logout', logout_path, method: 'delete' %>
+<% else %>
+  <%= link_to "Login", login_path %> or <%= link_to "Sign up now!", signup_path %>
+<% end %>
+
 <%= yield %>
+
+
 
 </body>
 </html>
