changed the signup form connections

--- a/app/views/attendances/show.html.erb
+++ b/app/views/attendances/show.html.erb
@@ -1,2 +1,6 @@
-<%= link_to 'Event Page', event_path(@events) %>
+<%= render 'short_form' %>
+
+
+
+
 <%= link_to 'Edit', edit_attendance_path(@attendance) %>
