--- a/app/views/attendances/_form.html.erb
+++ b/app/views/attendances/_form.html.erb
@@ -1,4 +1,5 @@
 <h1>Choose</h1>
+<h2>Enter in event number</h2>
 
 <%= form_for :attendance, url: {controller: 'attendances' ,action: 'create'} do |f| %>
 
