--- a/app/views/attendances/_short_form.html.erb
+++ b/app/views/attendances/_short_form.html.erb
@@ -1,6 +1,9 @@
 <h1>Choose</h1>
+<h2>Enter in event number</h2>
 
-<%= form_for :attendance, url: {action: 'create'} do |f| %>
+<%= form_for :attendance, url: {controller: 'attendances' ,action: 'create'} do |f| %>
+
+
 <p>
  <%f.label :event_id%><br>
  <%= f.text_field :event_id %>
@@ -20,6 +23,6 @@
    <%= f.submit %>
  </p>
 
+<% end %>
 
 <%= link_to 'Host an Event', new_event_path %>
-<% end %>
