--- a/app/views/attendances/index.html.erb
+++ b/app/views/attendances/index.html.erb
@@ -1,9 +1,10 @@
-<h1>My Events Listing</h1>
+<h1>My Attendences Listing</h1>
 <%= link_to 'New attendance', new_attendance_path %>
 <table>
 
   <% @attendances.each do |attendance| %>
     <tr>
+    	<td> <%= attendance %></td>
       <td><%= link_to  'Show', attendance_path(attendance) %></td>
        <td><%= link_to 'Edit', attendance_path(attendance) %></td>
        <td><%= link_to 'Destroy', attendance_path(attendance),
