events page is shown working on deleteing

--- a/app/views/attendances/_form.html.erb
+++ b/app/views/attendances/_form.html.erb
@@ -10,12 +10,12 @@
 </p>
 
 <p>
- <select name="post[Purpose for Networking]">
- <option>Please Select</option>
- <option>General Networking</option>
- <option>Hiring</option>
- <option>Job Search</option>
- <option>Other</option>
+<select name="post[Purpose for Networking]">
+	<option value="">Please Select</option>
+	<option value="1">General Networking</option>
+	<option value="2">Hiring</option>
+	<option value="3">Job Search</option>
+	<option value="4">Other</option>
 </select>
 </p>
 
