--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -18,9 +18,9 @@
       <%= f.label :contact_by %>
       <p>
        <select name="post[Contact by]">
-       <option>Please Select</option>
-       <option>Email</option>
-       <option>Phone</option>
+       <option value="">Please Select</option>
+       <option value="1">Email</option>
+       <option value="2">Phone</option>
       </select>
       </p>
 
