--- a/app/views/attendances/_form.html.erb
+++ b/app/views/attendances/_form.html.erb
@@ -10,13 +10,12 @@
 </p>
 
 <p>
-<select name="post[Purpose for Networking]">
-	<option value="">Please Select</option>
-	<option value="1">General Networking</option>
-	<option value="2">Hiring</option>
-	<option value="3">Job Search</option>
-	<option value="4">Other</option>
-</select>
+<%= f.select(:reason) do %>
+  <% [['General Networking', 1], ['Hiring', 2], ['Job Search', 3]].each do |c| -%>
+    <%= content_tag(:option, c.first, value: c.last) %>
+  <% end %>
+<% end %>
+
 </p>
 
 <p>
