--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -18,6 +18,26 @@
   <%= @event.description %>
 </p>
 
+<table>
+  <tr>
+    <th>First Name</th>
+    <th>Last Name</th>
+    <th>Company</th>
+    <th>Title</th>
+    
+  </tr>
+
+  <% @users.each do |user| %>
+    <tr>
+      <td><%= user.first_name %></td>
+      <td><%= user.last_name %></td>
+      <td><%= user.company_name %></td>
+      <td><%= user.job_title %></td>
+      
+    </tr>
+  <% end %>
+</table>
+
 
 
 <%= link_to 'Event Listing', events_path %>
