--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 <body>
   <li><%= link_to 'LinkedIn', '/auth/linkedin' %></li>
 
-<% if current_user %>
+<% if current_user? %>
   <%= link_to 'Logout', logout_path, method: 'delete' %>
 <% else %>
   <%= link_to "Login", login_path %> or <%= link_to "Sign up now!", signup_path %>
