--- a/app/views/events/index_by_user.html.erb
+++ b/app/views/events/index_by_user.html.erb
@@ -2,18 +2,21 @@
    <%= render partial: "attendances/short_form.html.erb" %>
 
 
+<% if @user.events.present? %>
+
 <h1>My Events Listing</h1>
 
-<table>
+  <table>
 
-  <% @user.attendances.each do |attendance| %>
-    <tr>
-    	<td> <%= attendance.event.event_title %></td>
-      <td><%= link_to  'Show the event', event_path(attendance.event) %></td>
-       <td><%= link_to 'Unregister from the event', attendance_path(attendance),
-                method: :delete, 
-                data: { confirm: 'Are you sure?' } %></td>
-      
-    </tr>
-  <% end %>
-</table>
+    <% @user.attendances.each do |attendance| %>
+      <tr>
+      	<td> <%= attendance.event.event_title %></td>
+        <td><%= link_to  'Show the event', event_path(attendance.event) %></td>
+         <td><%= link_to 'Unregister from the event', attendance_path(attendance),
+                  method: :delete, 
+                  data: { confirm: 'Are you sure?' } %></td>
+        
+      </tr>
+    <% end %>
+  </table>
+<% end %>
