--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -27,16 +27,11 @@
     
   </tr>
 
-  <% @users.each do |user| %>
     <tr>
-      <td><%= user.first_name %></td>
-      <td><%= user.last_name %></td>
-      <td><%= user.company_name %></td>
-      <td><%= user.job_title %></td>
-      
+      <td><%= @event_attendees %></td>  
     </tr>
-  <% end %>
 </table>
+
 
 
 
