--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,5 +1,9 @@
-<p>
-  <strong>Title:</strong>
+<div class="container">
+    <div class="vertical-center-row">
+        <div align="center">
+
+<p class="lead" >
+  <strong>Event:</strong>
   <%= @event.event_title %>
 </p>
 
@@ -34,6 +38,13 @@
 
 
 
+<%= link_to 'Home', events_by_user_path,class: "btn btn-small btn-success"  %>
+<%= link_to 'Edit', edit_event_path(@event),class: "btn btn-small btn-success"  %>
 
-<%= link_to 'Home', events_by_user_path %>
-<%= link_to 'Edit', edit_event_path(@event) %>
+    </div>
+</div>
+</div>
+
+
+
+
