--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,17 +7,26 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<div class="col-md-12">
+
   <li><%= link_to 'LinkedIn', '/auth/linkedin' %></li>
 
+
+<div class="pull-right">
+
 <% if current_user? %>
-  <%= link_to 'Logout', logout_path, method: 'delete' %>
+  <%= link_to 'Logout', logout_path, method: 'delete',class: "btn btn-small btn-primary"  %>
 <% else %>
-  <%= link_to "Login", login_path %> or <%= link_to "Sign up now!", signup_path %>
+<div class="center-block">
+  <%= link_to "Login", login_path,class: "btn btn-small btn-primary" %>  <%= link_to "Sign up now!", signup_path, class: "btn btn-small btn-primary"  %>
+ </div>
+
 <% end %>
 
+</div>
 <%= yield %>
 
-
+</div>
 
 </body>
 </html>
