--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -4,5 +4,5 @@
 
 <div class="pull-right">
 
-<%= link_to 'Back',  events_path, :class => "btn btn-warning btn-sm "%>
+<%= link_to 'Back',  events_by_user_path, :class => "btn btn-warning btn-sm "%>
 </div>
