--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -56,6 +56,6 @@
       <%= f.submit "Sign up", class: "btn btn-primary" %>
     <% end %>
 
-    <p>Existing user? <%= link_to "Login", login_path,class: "btn btn-small btn-success" %></p>
+    <p>Existing user? <%= link_to "Login", login_path,class: "btn btn-small btn-primary" %></p>
   </div>
 </div>
